# multi_robot_navigation

./: LICENSE  README.md
config/: amcl_template.yaml  controller_template.yaml  multirobot_config.rviz  planner_template.yaml  recovery_template.yaml
launch/: main_launch_multi_robot_navigation.launch.py  navigation_multirobot.launch.py
models/: model.sdf
multi_robot_navigation/: package.xml  setup.cfg  setup.py
multi_robot_navigation/config/: behavior.xml  bt_navigator_template.yaml  robot_specs.yaml
multi_robot_navigation/launch/: multi_robot_localization.launch.py  rviz_config.launch.py  spawn_multi_robots.launch.py
