<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fatimahaalahmed1@todo.todo">fatimahaalahmed1</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>rviz2</exec_depend>
  <depend>xacro</depend>
  <depend>jinja2</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
